UX: fix login overflow

--- a/app/assets/stylesheets/common/modal/login-modal.scss
+++ b/app/assets/stylesheets/common/modal/login-modal.scss
@@ -42,6 +42,7 @@
 
   .login-left-side {
     padding: 3rem;
+    overflow: auto;
   }
 
   .login-welcome-header {
